sg/sg-main.tf
#================================================== Server PIN FINAL ==================================================
resource "aws_security_group" "pin-final-sg" {
  name        = var.name
  description = var.description
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Environment = var.tags["env"]
    project     = var.tags["project"]
  }
}
